# ChangeLog for app-text/enchant
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/enchant/ChangeLog,v 1.61 2006/07/12 22:14:44 agriffis Exp $

  12 Jul 2006; Aron Griffis <agriffis@gentoo.org> enchant-1.2.5.ebuild:
  Mark 1.2.5 stable on ia64

  26 Jun 2006; Guy Martin <gmsoft@gentoo.org> enchant-1.2.5.ebuild:
  Stable on hppa.

  23 May 2006; Markus Rothe <corsair@gentoo.org> enchant-1.2.5.ebuild:
  Stable on ppc64; bug #133939

  23 May 2006; Chris Gianelloni <wolf31o2@gentoo.org> enchant-1.2.5.ebuild:
  Stable on x86 wrt bug #133939.

  22 May 2006; Gustavo Zacarias <gustavoz@gentoo.org> enchant-1.2.5.ebuild:
  Stable on sparc wrt #133939

  21 May 2006; Daniel Gryniewicz <dang@gentoo.org> enchant-1.2.5.ebuild:
  Marked stable on amd64 Per bug# 133939

  21 May 2006; <nixnut@gentoo.org> enchant-1.2.5.ebuild:
  Stable on ppc. bug #133939

*enchant-1.2.5 (03 Apr 2006)

  03 Apr 2006; Marinus Schraal <foser@gentoo.org> enchant-1.2.5.ebuild :
  New release

*enchant-1.2.4 (02 Apr 2006)

  02 Apr 2006; Marinus Schraal <foser@gentoo.org> enchant-1.2.4.ebuild :
  New release

*enchant-1.2.3 (22 Mar 2006)

  22 Mar 2006; Marinus Schraal <foser@gentoo.org> enchant-1.2.3.ebuild :
  New release

*enchant-1.2.2 (26 Feb 2006)

  26 Feb 2006; Marinus Schraal <foser@gentoo.org> enchant-1.2.2.ebuild :
  New release, don't use gnome2 eclass, add huspell as possible backend

*enchant-1.2.0 (08 Dec 2005)

  08 Dec 2005; Joe McCann <joem@gentoo.org> metadata.xml,
  +enchant-1.2.0.ebuild:
  version bump

  02 Sep 2005; <dang@gentoo.org> enchant-1.1.6.ebuild:
  Marked stable on amd64

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> enchant-1.1.6.ebuild:
  stable on ia64

  13 Aug 2005; Michael Hanselmann <hansmi@gentoo.org> enchant-1.1.6.ebuild:
  Stable on ppc.

  08 Aug 2005; Markus Rothe <corsair@gentoo.org> enchant-1.1.6.ebuild:
  Stable on ppc64
