@@ -1,6 +1,9 @@
 # ChangeLog for app-text/gtkspell
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gtkspell/ChangeLog,v 1.47 2006/05/21 21:54:10 dang Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/gtkspell/ChangeLog,v 1.48 2006/09/05 04:08:01 kumba Exp $
+
+  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> gtkspell-2.0.11-r1.ebuild:
+  Marked stable on mips.
 
   21 May 2006; Daniel Gryniewicz <dang@gentoo.org> ChangeLog:
   Marked stable on amd64 per bug# 133939
