@@ -1,6 +1,9 @@
 # ChangeLog for app-text/enchant
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/enchant/ChangeLog,v 1.61 2006/07/12 22:14:44 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/enchant/ChangeLog,v 1.62 2006/09/05 04:06:42 kumba Exp $
+
+  05 Sep 2006; Joshua Kinard <kumba@gentoo.org> enchant-1.2.5.ebuild:
+  Marked stable on mips.
 
   12 Jul 2006; Aron Griffis <agriffis@gentoo.org> enchant-1.2.5.ebuild:
   Mark 1.2.5 stable on ia64
